initialize wnut2021 paper draft

--- a/paper/custom.bib
+++ b/paper/custom.bib
@@ -1,3 +1,5 @@
+% Use this file for citations not found in the ACL Anthology (contained in "anthology.bib").
+
 @book{Aho:72,
     author  = {Alfred V. Aho and Jeffrey D. Ullman},
     title   = {The Theory of Parsing, Translation and Compiling},
@@ -11,8 +13,8 @@
     author  = {{American Psychological Association}},
     title   = {Publications Manual},
     year    = "1983",
-   publisher = {American Psychological Association},
-   address = {Washington, DC}
+    publisher = {American Psychological Association},
+    address = {Washington, DC}
 }
 
 @article{Chandra:81,
@@ -26,7 +28,13 @@
 	doi = "10.1145/322234.322243",
 }
 
-
+@inproceedings{andrew2007scalable,
+  title={Scalable training of {L1}-regularized log-linear models},
+  author={Andrew, Galen and Gao, Jianfeng},
+  booktitle={Proceedings of the 24th International Conference on Machine Learning},
+  pages={33--40},
+  year={2007},
+}
 
 @book{Gusfield:97,
     author  = {Dan Gusfield},
@@ -46,22 +54,17 @@
     note    = {version 2}
 }
 
-@inproceedings{borsch2011,
-	title={A particle filter algorithm for {B}ayesian wordsegmentation},
-	author={Borschinger, Benjamin and Johnson, Mark and others},
-	booktitle = {Proceedings of the Australasian Language Technology Association Workshop 2011},
-	year={2011},
-	address = {Canberra, Australia},
-	pages = {10--18},
+@article{Ando2005,
+	Acmid = {1194905},
+	Author = {Ando, Rie Kubota and Zhang, Tong},
+	Issn = {1532-4435},
+	Issue_Date = {12/1/2005},
+	Journal = {Journal of Machine Learning Research},
+	Month = dec,
+	Numpages = {37},
+	Pages = {1817--1853},
+	Publisher = {JMLR.org},
+	Title = {A Framework for Learning Predictive Structures from Multiple Tasks and Unlabeled Data},
+	Volume = {6},
+	Year = {2005}
 }
-
-
-@article{ACM:83,
-	author = {Association for Computing Machinery},
-	year = "1983",
-	journal = {Computing Reviews},
-	volume = "24",
-	number = "11",
-	pages = "503--512",
-}
-
