--- a/paper/wnut2021.tex
+++ b/paper/wnut2021.tex
@@ -151,7 +151,17 @@ probably most of it will have to be rewritten, but that's 100\% normal even for 
 
 \subsection{Dates}
 
+\begin{table}
+    \input{fig/runtimes.tex}
+    \caption{The runtimes of the different libraries.}
+\end{table}
+
 \subsection{Text}
+
+\begin{table}
+    \input{fig/annotator.tex}
+    \caption{Inner-annotator agreement of the labeled text dataset.}
+\end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -161,6 +171,11 @@ probably most of it will have to be rewritten, but that's 100\% normal even for 
     \input{fig/results.tex}
     \fixme{this table will be automatically loaded from the file fig/results.txt; you should adjust your benchmark script so that it can automatically generate this file}
     \caption{The results of applying metahtml to our manually annotated dataset.}
+\end{table}
+
+\begin{table}
+    \input{fig/runtimes.tex}
+    \caption{The runtimes of the different libraries.}
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
