Revise test_cleaneval.py and update output to paper

--- a/paper/fig/annotator.tex
+++ b/paper/fig/annotator.tex
@@ -1,1 +1,5 @@
-\includegraphics[width=\columnwidth]{example-image-b}
+\begin{tabular}{ |c|c|c|}\hline
+annotators& mikeizbicki& Tonnpo\\\hline
+mikeizbicki& 100.00& 84.42\\\hline
+Tonnpo& 87.61& 100.00\\\hline
+\end{tabular}
