--- a/paper/fig/results.tex
+++ b/paper/fig/results.tex
@@ -1,1 +1,8 @@
-\includegraphics[width=\columnwidth]{example-image-b}
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c|c|c|c| }\hline
+Library & F & P & R & F.tag & P.tag & R.tag & TP & FP & FN & TP.tag & FP.tag & FN.tag \\\hline
+cleaneval & 15.91 & 8.71 & 91.89 & 48.21 & 45.20 & 51.65 & 175926 & 1844056 & 15519 & 2443 & 2962 & 2287 \\\hline
+metahtml & 66.01 & 64.95 & 67.10 & 0.00 & 0.00 & 0.00 & 128454 & 69315 & 62991 & 0 & 0 & 4730 \\\hline
+trafilatura-no-fallback & 79.65 & 79.17 & 80.13 & 0.00 & 0.00 & 0.00 & 153405 & 40357 & 38040 & 0 & 0 & 4730 \\\hline
+trafilatura-with-fallback & 80.29 & 78.94 & 81.69 & 0.00 & 0.00 & 0.00 & 156394 & 41714 & 35051 & 0 & 0 & 4730 \\\hline
+newspaper3k & 24.39 & 14.13 & 89.09 & 2.24 & 30.39 & 1.16 & 170560 & 1036402 & 20885 & 55 & 126 & 4675 \\\hline
+\end{tabular}
